feat: Add HEX color handling and map-related updates